; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-shape.c_glyph_h_advance_func.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-shape.c_glyph_h_advance_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*)* @glyph_h_advance_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @glyph_h_advance_func(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %8, align 4
  switch i32 %10, label %14 [
    i32 1, label %11
    i32 2, label %12
    i32 3, label %13
  ]

11:                                               ; preds = %4
  store i32 10, i32* %5, align 4
  br label %15

12:                                               ; preds = %4
  store i32 6, i32* %5, align 4
  br label %15

13:                                               ; preds = %4
  store i32 5, i32* %5, align 4
  br label %15

14:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %15

15:                                               ; preds = %14, %13, %12, %11
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
